# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = bgpy_pkg
author = Justin Furuness, Cameron Morris, Reynaldo Morillo
author_email = jfuruness@gmail.com
description = Simulates BGP and ROV
version = 3.0.0
url = https://github.com/jfuruness/bgpy_pkg

keywords =
    BGPy
    bgpy
    bgpy_pkg
    BGP
    Caida
    CAIDA
    Peers
    Providers
    Relationships
    AS-Serial
    Customers
    Simulation
    ROV
    Furuness

classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

license = BSD
license_files = LICENSE.txt

long_description = https://github.com/jfuruness/bgpy/wiki
long_description_content_type = text/markdown

[options]
python_requires = >= 3.10
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
install_requires =
    beautifulsoup4==4.12.2
    requests==2.31.0
    frozendict==2.3.8
    graphviz==0.20.1
    pillow==10.1.0
    matplotlib==3.8.1
    pytest==7.4.3
    PyYAML~=6.0
    tqdm==4.66.1
    yamlable==1.1.1

description_file = README.md

[options.entry_points]
console_scripts =
    bgpy = bgpy.__main__:main

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
# https for github actions and github no longer supports pip + git installs
test =
    black==23.11.0
    pre-commit==3.5.0
    types-requests==2.31.0.10
    types-PyYAML==6.0.12.12
    mypy==1.7.0
    flake8==6.1.0
    tox==4.11.3
    pytest-xdist==3.3.1
    ruff==0.1.5

[options.package_data]
bgpy = py.typed

[flake8]
max-line-length = 88

[coverage:run]
branch = True
omit =
    *tests*
    *__init__*

[coverage:report]
show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
